# -

./: .gitignore  NetGuard_Pro_Technical_Specification.md
netguard-pro/: README.md
netguard-pro/backend/: pyproject.toml
netguard-pro/backend/app/: config.py  logging_config.py  main.py
netguard-pro/backend/app/api/v1/: auth.py  billing.py  firewall.py  monitoring.py  router.py  users.py
netguard-pro/backend/app/controllers/: firewall_controller.py
netguard-pro/backend/app/core/: rbac.py  security.py
netguard-pro/backend/app/db/: session.py
netguard-pro/backend/app/models/: user.py
netguard-pro/docs/: ARCHITECTURE.md  DEVELOPMENT_PLAN.md  DEVOPS_PIPELINE.md  REPOSITORY_STRUCTURE.md  SCALING_STRATEGY.md
netguard-pro/frontend/: index.html  package.json  tsconfig.json
netguard-pro/frontend/src/: index.css
